--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "programmingtask",
   "version": "1.0.0",
   "description": "this is programming task",
-  "main": "ProgrammingTask.html",
+  "main": "index.php",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
